# panorama

./: .cvsignore  .gitignore  Makefile-executable.inc  Makefile.am  Makefile.deps  Makefile.in  Makefile.plugin.in  Makefile.rules  Makefile.targets.in  Makefile.vars.in  acinclude.m4  aclocal.m4  bison.simple  config.sub  configure  configure.ac  configure.in  cvsbootstrap.sh  libtool  mkinstalldirs
data/: Makefile.am  Makefile.in
doc/: .cvsignore  .gitignore  AUTHORS  BUGS  CREDITS  EXPERIMENTAL  FAQ  FAQ.html  GLOSSARY.html  INSTALL  Makefile.am  Makefile.in  NEWS  NOTES  README  TODO  TODO_1.0  config.in  pluginrc  pluginrc.in
doc/api/: .cvsignore  Doxyfile.in  Makefile.am  Makefile.in
doc/developers/: C++_Coding_Style  CHANGES_0.9.1-0.10.0  General  Makefile.am  Makefile.in  PROJECTS  README  WRITING_A_PLUGIN
doc/users/: Makefile.am  Makefile.in  README  classes.html  language.html
hlapi/: .cvsignore  Makefile.am  Makefile.in  aggregate.cpp  aggregate.h  box.cpp  box.h  circle.cpp  circle.h  class_manager.cpp  class_manager.h  cone.cpp  cone.h  csg.cpp  csg.h  cylinder.cpp  cylinder.h  grid.cpp  grid.h  hlapi_all.h  image_manager.cpp  image_manager.h  mesh_object.cpp  mesh_object.h  phong_triangle.cpp  phong_triangle.h  plane.cpp  plane.h  plugin_manager.cpp  plugin_manager.h  plugins_all.h  quadric.cpp  quadric.h  rectangle.cpp  rectangle.h  scene_manager.cpp  scene_manager.h  sphere.cpp  sphere.h  torus.cpp  (+3 more)
llapi/: .cvsignore  Makefile.am  Makefile.in  aggregate.cpp  aggregate.h  atmosphere.cpp  atmosphere.h  atmospheric_object.cpp  atmospheric_object.h  attribs.h  attribute.cpp  attribute.h  attribute_all.h  base_class.cpp  base_class.h  bounding_box.cpp  bounding_box.h  bsdf.cpp  bsdf.h  camera.cpp  camera.h  catrom2.cpp  catrom2.h  checkerboard.h  class_mgr_base.h  color.h  coord2.hpp  coord3.hpp  debug.cpp  debug.h  entity.cpp  entity.h  exception.cpp  exception.hpp  extended_attribute.h  extended_type_functions.h  extended_user_functions.h  file.cpp  file.h  frame.h  (+84 more)
plugins/object/: Makefile.am  Makefile.in
plugins/object/abvh/: Makefile.data  abvh.cpp  abvh.h
plugins/object/aggregate_uniform_grid/: .cvsignore  Makefile.data  aggregate_uniform_grid.cpp  aggregate_uniform_grid.h  uniform_grid.cpp  uniform_grid.h
plugins/object/bezier/: Makefile.data  bezier.cpp  bezier.h  beziersub.cpp  beziersub.h
plugins/object/height_field/: .cvsignore  Makefile.data  height_field.cpp  height_field.h
plugins/object/lwo/: Makefile.data  chunks.cpp  chunks.h  lwo.cpp  lwo.h
plugins/object/polyhedron/: Makefile.data  polyhedron.cpp  polyhedron.h
plugins/object/subdiv/: Makefile.data  TODO  subdiv.cpp  subdiv.h  subdivedge.cpp  subdivedge.h  subdivface.cpp  subdivface.h  subdivvert.cpp  subdivvert.h
plugins/scene_io/rt/: .cvsignore  Makefile.am  Makefile.data  Makefile.in  attrib_tweak.cpp  attrib_tweak.h  attribute_math.cpp  attribute_math.h  language_functions.cpp  language_functions.h  location.hh  parsed_types.h  parser.cpp  parser.h  parser.hpp  parser.y  parser_defs.h  rt_io.cpp  rt_io.h  scanner.cpp  scanner.l
programs/gui/: .cvsignore  AUTHORS  CREDITS  IDEAS  Makefile.am  Makefile.in  README  color_preview.cpp  color_preview.h  common.h  image_callbacks.cpp  image_callbacks.h  image_window.cpp  image_window.h  main.cpp  material_graph.cpp  material_graph.h  material_window.cpp  material_window.h  message_dialog.cpp  message_dialog.h  object_properties_dialog.cpp  object_properties_dialog.h  plugin_window.cpp  plugin_window.h  render_dialog.cpp  render_dialog.h  scene_callbacks.cpp  scene_callbacks.h  scene_tree.cpp  scene_tree.h  scene_window.cpp  scene_window.h
scenes/lights/: Makefile.am  Makefile.in  area_light1.rt  area_light2.rt  halo_lights.rt  night.rt  night2.rt  projector.rt  warn.rt
scenes/materials/: Makefile.am  Makefile.in  amplifier.rt  anisotropic.rt  anisotropic2.rt  background_mapping.rt  brick.rt  bump.rt  checker.rt  checker45.rt  composite.rt  cook.rt  crackle.rt  crystal.rt  cylgrad.rt  leopard.rt  marble.rt  marble2.rt  materials.rt  painted_crystal.rt  pattern_demo.rt  schlick.rt  schlick_double.rt  texture.rt  ward.rt  warping.rt  water.rt  wood.rt  worley.rt
scenes/misc/: Makefile.am  Makefile.in  blur.rt  cornell_box.rt  env_test.rt  lamp.rt  lamp_point.rt  lens_flare.rt  lf_test.rt  plastic_cornell_box.rt  projector_cartoon.rt  qrot.rt  text.rt  text2.rt  train.rt  xmas-tree.rt
scenes/objects/: Makefile.am  Makefile.in  accel_grid.rt  accel_grid2.rt  aggregate.rt  aggregate2.rt  aggregate_uniform_grid.rt  bezier.rt  box.rt  box2.rt  circle.rt  cone.rt  csg.rt  cylinder.rt  phong_triangle.rt  plane.rt  quadric.rt  rectangle.rt  sphere.rt  teapot.rt  torus.rt  triangle.rt
src/: .cvsignore  Makefile.am  mapping.txt  update_blocxx.sh
src/common/: .cvsignore  BaseClass.cpp  BaseClass.hpp  Capabilities.cpp  Capabilities.hpp  Cloneable.cpp  Cloneable.hpp  Fuzzy.hpp  GenericCoord2.hpp  GenericCoord3.hpp  GenericFrame.hpp  GenericInterval.hpp  GenericLine.hpp  GenericLine2.hpp  GenericONB.hpp  GenericPoint2.hpp  GenericPoint3.hpp  GenericRGBAColor.hpp  GenericRGBColor.hpp  GenericRectangle.hpp  GenericSize2.hpp  GenericVector2.hpp  GenericVector3.hpp  Larger.hpp  Makefile.am  Raster.hpp  StringDumpable.cpp  StringDumpable.hpp  TextUtils.cpp  TextUtils.hpp  Types.hpp
src/graphics/: GenericAlphaImage.hpp  GenericImage.hpp  GenericRGBImage.hpp  ImageConvert.cpp  ImageConvert.hpp  ImageFormat.cpp  ImageFormat.hpp  Makefile.am  MaskedImage.hpp  PPMLoader.cpp  PPMLoader.hpp  XPMLoader.cpp  XPMLoader.hpp
test/unit/: .cvsignore  CapabilitiesTestCases.cpp  CloneableTestCases.cpp  Coord2TestCases.cpp  Coord3TestCases.cpp  CopyCounter.cpp  CopyCounter.hpp  CopyCounterTestCases.cpp  FrameTestCases.cpp  ImageTestCases.cpp  IntervalTestCases.cpp  Line2TestCases.cpp  Line3TestCases.cpp  Makefile.am  ONBTestCases.cpp  Point2TestCases.cpp  Point3TestCases.cpp  RGBAColorTestCases.cpp  RGBColorTestCases.cpp  RasterTestCases.cpp  StringDumpableTestCases.cpp  Vector2TestCases.cpp  Vector3TestCases.cpp  run_make_check.sh
(+341 files in other folders)
